Token for calling server from temporal
